force-app/main/default/objects/Segment_POE__c/Segment_POE__c.object-meta.xml
<CustomObject>
    <label>Segment</label>
    <nameField>
        <displayFormat>SG{00000000}</displayFormat>
        <label>Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>