force-app/main/default/objects/Segment_POE__c/fields/Action_Code__c.field-meta.xml
<CustomField>
    <fullName>Action_Code__c</fullName>
    <label>Action Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>