force-app/main/default/objects/Segment_POE__c/fields/Air_Miles_Flown__c.field-meta.xml
<CustomField>
    <fullName>Air_Miles_Flown__c</fullName>
    <label>Air Miles Flown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>