force-app/main/default/objects/Segment_POE__c/fields/Airline_Ref_Id__c.field-meta.xml
<CustomField>
    <fullName>Airline_Ref_Id__c</fullName>
    <label>Airline Ref Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>