force-app/main/default/objects/Segment_POE__c/fields/arrival_date__c.field-meta.xml
<CustomField>
    <fullName>arrival_date__c</fullName>
    <formula>DATEVALUE( LEFT(Arrival_Date_Time_Text__c, 10) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>