force-app/main/default/objects/Segment_POE__c/fields/arrival_date_time__c.field-meta.xml
<CustomField>
    <fullName>arrival_date_time__c</fullName>
    <formula>DATETIMEVALUE( LEFT(Arrival_Date_Time_Text__c, 10) &amp; &quot; &quot; &amp; RIGHT(Arrival_Date_Time_Text__c, 8) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrival Date Time</label>
    <type>DateTime</type>
</CustomField>