force-app/main/default/objects/Segment_POE__c/fields/Arrival_Terminal_Code__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Terminal_Code__c</fullName>
    <label>Arrival Terminal Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>