force-app/main/default/objects/Segment_POE__c/fields/Arrival_Terminal_Name__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Terminal_Name__c</fullName>
    <label>Arrival Terminal Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>