force-app/main/default/objects/Segment_POE__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <formula>TIMEVALUE(arrival_date_time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrival Time</label>
    <type>Time</type>
</CustomField>