force-app/main/default/objects/Segment_POE__c/fields/Class_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_Of_Service__c</fullName>
    <label>Class Of Service</label>
    <length>3</length>
    <type>Text</type>
</CustomField>