force-app/main/default/objects/Segment_POE__c/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <label>Departure Airport</label>
    <length>6</length>
    <type>Text</type>
</CustomField>