force-app/main/default/objects/Segment_POE__c/fields/departure_date__c.field-meta.xml
<CustomField>
    <fullName>departure_date__c</fullName>
    <formula>DATEVALUE( LEFT(Departure_Date_Time_Text__c, 10) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>