force-app/main/default/objects/Segment_POE__c/fields/departure_date_time__c.field-meta.xml
<CustomField>
    <fullName>departure_date_time__c</fullName>
    <formula>DATETIMEVALUE( LEFT(Departure_Date_Time_Text__c, 10) &amp; &quot; &quot; &amp; RIGHT(Departure_Date_Time_Text__c, 8) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date Time</label>
    <type>DateTime</type>
</CustomField>