force-app/main/default/objects/Segment_POE__c/fields/Departure_Date_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time_Text__c</fullName>
    <label>Departure Date Time Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>