force-app/main/default/objects/Segment_POE__c/fields/Departure_Terminal_Code__c.field-meta.xml
<CustomField>
    <fullName>Departure_Terminal_Code__c</fullName>
    <label>Departure Terminal Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>