force-app/main/default/objects/Segment_POE__c/fields/Departure_Terminal_Name__c.field-meta.xml
<CustomField>
    <fullName>Departure_Terminal_Name__c</fullName>
    <label>Departure Terminal Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>