force-app/main/default/objects/Segment_POE__c/fields/Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time__c</fullName>
    <formula>TIMEVALUE(departure_date_time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Time</label>
    <type>Time</type>
</CustomField>