force-app/main/default/objects/Segment_POE__c/fields/Eticket__c.field-meta.xml
<CustomField>
    <fullName>Eticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eticket</label>
    <type>Checkbox</type>
</CustomField>