force-app/main/default/objects/Segment_POE__c/fields/Inbound_Connection__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Connection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inbound Connection</label>
    <type>Checkbox</type>
</CustomField>