force-app/main/default/objects/Segment_POE__c/fields/Marketing_Class_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Class_Of_Service__c</fullName>
    <label>Marketing Class Of Service</label>
    <length>5</length>
    <type>Text</type>
</CustomField>