force-app/main/default/objects/Segment_POE__c/fields/Operating_Airline_Code__c.field-meta.xml
<CustomField>
    <fullName>Operating_Airline_Code__c</fullName>
    <label>Operating Airline Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>