force-app/main/default/objects/Segment_POE__c/fields/Operating_Airline_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Operating_Airline_Short_Name__c</fullName>
    <label>Operating Airline Short Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>