force-app/main/default/objects/Segment_POE__c/fields/Outbound_Connection__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Connection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound Connection</label>
    <type>Checkbox</type>
</CustomField>