force-app/main/default/objects/Segment_POE__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <label>PNR</label>
    <referenceTo>PNR_POE__c</referenceTo>
    <relationshipLabel>Segments</relationshipLabel>
    <relationshipName>Segments_POE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>