force-app/main/default/objects/Segment_POE__c/fields/Schedule_Change_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Change_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Change Indicator</label>
    <type>Checkbox</type>
</CustomField>