force-app/main/default/objects/Segment_POE__c/fields/Segment_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Segment_Booked_Date__c</fullName>
    <label>Segment Booked Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>