force-app/main/default/objects/Segment_POE__c/fields/Segment_Id_From_Sabre__c.field-meta.xml
<CustomField>
    <fullName>Segment_Id_From_Sabre__c</fullName>
    <label>Segment Id From Sabre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>