force-app/main/default/objects/Segment_POE__c/fields/Segment_Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Segment_Special_Requests__c</fullName>
    <label>Segment Special Requests</label>
    <type>TextArea</type>
</CustomField>