force-app/main/default/objects/Segment_POE__c/fields/Ticket_Number_From_Sabre__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number_From_Sabre__c</fullName>
    <label>Ticket Number From Sabre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>